...
    <string name="e_mails_des_participants">E-mails des participants</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="scroll_view">scroll_view</string>
    <string name="ok">OK</string>
    <string name="valid_email">Valid email</string>
    <string name="heure_de_d_but_de_r_union">Heure de début de réunion</string>
    <string name="ajouter_un_mail">Ajouter un mail</string>
    <string name="erreur_objet_reunion">Merci de remplir le champs -Objet de la réunion-</string>
    <string name="erreur_heure_reunion">Merci de remplir le champs -Heure de la réunion-</string>
    <string name="erreur_mail">Veuillez entrer une adresse mail valide</string>
    <string name="erreur_minimum_mails">Veuillez entrer au moins 2 adresses mail</string>
    <string name="choose_your_room">Choose your room</string>
    <string name="room_one_spinner">Room One</string>
...
